[package]
name = "hsspdfopen"
version = "0.2.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
exitfailure = "0.5"
lazy_static = "1.4"
open = "3.0"
opener = "0.5"
regex = "1.6"
winreg = "0.10.1"
