[package]
name = "hsspdfopen"
version = "1.0.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
open = "5.3"
opener = "0.8"
regex = "1.6"
winreg = "0.55.0"

[dev-dependencies]
tempfile = "3.0"
